# 
# FIXME: the 'project' metadata section is commented out because PEP621 is still not supported by Poetry as of Apr 2024, see https://github.com/python-poetry/poetry/issues/3332
# 
#[project]
#name = "ha-alarm-raspy2mqtt"
#version = "1.1.1"
#authors = [
#  { name="Francesco Montorsi", email="francesco.montorsi@gmail.com" },
#]
#description = "HomeAssistant Alarm bridge for wired sensors/actuators"
#readme = "README.md"
# some features like asyncio TaskGroups and Exception groups are available only since Python 3.11:
#requires-python = ">=3.11"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
#    "Operating System :: OS Independent",
#]

[project.urls]
"Homepage" = "https://github.com/f18m/ha-alarm-raspy2mqtt"
"Bug Tracker" = "https://github.com/f18m/ha-alarm-raspy2mqtt/issues"

[project.scripts]
raspy2mqtt = "raspy2mqtt:main_loop"

[tool.black]
line-length = 120

[tool.poetry]
name = "ha-alarm-raspy2mqtt"
version = "1.1.1"
description = "HomeAssistant Alarm bridge for wired sensors/actuators"
authors = ["Francesco Montorsi <francesco.montorsi@gmail.com>"]
readme = "README.md"
packages = [{include = "raspy2mqtt"}]

# DEPENDENCIES
# 1) since Renovate bot is used, it's best to pin dependency versions; 
#    see https://docs.renovatebot.com/modules/manager/poetry/
# 2) reference docs for each dependency:
#  aiomqtt ->    https://sbtinstruments.github.io/aiomqtt/
#  SM16inpind -> https://github.com/SequentMicrosystems/16inpind-rpi/tree/main/python
#  PyYAML ->     https://pyyaml.org/wiki/PyYAMLDocumentation
#  gpiozero ->   https://gpiozero.readthedocs.io/en/latest/index.html
#  DEPRECATED: RPi.GPIO ->   https://pythonhosted.org/RPIO/   (backend for gpiozero)
#              As of March 2024, RPI.GPIO does not work anymore on latest Raspbian, see https://github.com/gpiozero/gpiozero/issues/1136
#              So I had to switch to pigpio, which however needs a daemon to be running to work (!!!)
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
aiomqtt = "2.1.0"
sm16inpind = "1.0.1"
PyYAML = "6.0.1"
gpiozero = "2.0.1"
pigpio = "1.78"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
