[project]
name = "rpi2home-assistant"
description = "Raspberry PI to Home Assistant bridge through MQTT for wired sensors/actuators"
authors = [
  { name="Francesco Montorsi", email="francesco.montorsi.nospam@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/f18m/rpi2home-assistant"
"Bug Tracker" = "https://github.com/f18m/rpi2home-assistant/issues"

[project.scripts]
raspy2mqtt = "raspy2mqtt.main:entrypoint"

[tool.black]
line-length = 120

[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_raspy2mqtt_version.py"
template = '''
version = "{version}"
'''

# disable guessing of next version, 
# see https://setuptools-scm.readthedocs.io/en/latest/extending/#setuptools_scmversion_scheme
[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

